--- a/MyMainForm_2.ui
+++ b/MyMainForm_2.ui
@@ -96,6 +96,9 @@
           <pointsize>14</pointsize>
          </font>
         </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item>
